# eventsourcing-persistence-poc

./: docker-compose.yml  main.py  pyproject.toml
poc/: postgres.py
