[tool.poetry]
name = "eventsourcing-persistence-poc"
version = "0.1.0"
description = ""
authors = ["Karl Rixon"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
eventsourcing = { version = "~9.2.14" }
psycopg2 = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

